--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "webpack -d --watch",
+    "dev": "webpack-dev-server",
     "build": "webpack -p"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/dave-cooper-cko/cko-grid#readme",
   "devDependencies": {
+    "angular-ui-router": "^0.3.1",
     "babel-cli": "^6.16.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.18.0",
@@ -31,16 +32,22 @@
     "eslint-plugin-react": "^6.4.1",
     "jest": "^16.0.2",
     "jest-enzyme": "^2.0.0",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "angular": "^1.5.8",
     "chai": "^3.5.0",
     "chai-jest-snapshot": "^0.2.1",
     "enzyme": "^2.5.1",
     "html-webpack-plugin": "^2.24.1",
+    "ngreact": "^0.3.0",
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
-    "sinon": "^1.17.6"
+    "rxjs": "^5.0.0-rc.1",
+    "script-loader": "^0.7.0",
+    "sinon": "^1.17.6",
+    "webpack-merge": "^0.15.0"
   }
 }
