--- a/package.json
+++ b/package.json
@@ -37,11 +37,20 @@
   },
   "dependencies": {
     "angular": "^1.5.8",
+    "autoprefixer": "^6.5.3",
     "chai": "^3.5.0",
     "chai-jest-snapshot": "^0.2.1",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.25.0",
     "enzyme": "^2.5.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
+    "lodash": "^4.16.6",
     "ngreact": "^0.3.0",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-less": "^0.15.0",
+    "postcss-loader": "^1.1.1",
+    "precss": "^1.4.0",
     "react": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2",
