--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose",
     "dev": "webpack-dev-server",
     "build": "webpack -p"
   },
@@ -45,6 +45,7 @@
     "enzyme": "^2.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
+    "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.16.6",
     "ngreact": "^0.3.0",
     "postcss-cssnext": "^2.8.0",
@@ -57,6 +58,12 @@
     "rxjs": "^5.0.0-rc.1",
     "script-loader": "^0.7.0",
     "sinon": "^1.17.6",
+    "sinon-spy-react": "^2.0.0",
     "webpack-merge": "^0.15.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css)$": "identity-obj-proxy"
+    }
   }
 }
