--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.16.6",
     "ngreact": "^0.3.0",
+    "postcss-click": "^1.0.0",
     "postcss-cssnext": "^2.8.0",
     "postcss-less": "^0.15.0",
     "postcss-loader": "^1.1.1",
